fix(core): update control height and control contrast corrections
- Updated control height variables to use system-level interaction field height across various components.
- Fixed issue with incorrect interaction state computed colors due to bad inheritance
- Fixed issue when a control/interaction failed to have contrast due to no inherited background to compute from

--- a/projects/elements/src/copy-button/copy-button.css
+++ b/projects/elements/src/copy-button/copy-button.css
@@ -1,5 +1,5 @@
 :host {
-  --nve-sys-interaction-state-base: var(--background);
+  --nve-sys-interaction-state-base: var(--background, var(--nve-sys-layer-canvas-background));
   --color: var(--nve-sys-text-muted-color);
   --border-radius: var(--nve-ref-border-radius-full);
   --line-height: 0;
