--- a/projects/elements/src/switch/switch.css
+++ b/projects/elements/src/switch/switch.css
@@ -6,6 +6,7 @@
   --background: var(--nve-sys-interaction-field-background);
   --width: var(--nve-ref-size-1000);
   --height: var(--nve-ref-size-500);
+  --padding: 0 var(--nve-ref-size-50);
   --anchor-width: calc(var(--nve-ref-size-300) + var(--nve-ref-size-50));
   --anchor-height: calc(var(--nve-ref-size-300) + var(--nve-ref-size-50));
   --anchor-border-radius: var(--nve-ref-border-radius-xxl);
@@ -38,9 +39,9 @@
   background: var(--background);
   height: var(--height);
   width: var(--width);
+  padding: var(--padding);
   min-height: auto;
   display: flex !important;
-  padding: 0 var(--nve-ref-size-100);
   align-items: center;
   transition: background-color var(--nve-ref-animation-duration-150) ease;
   position: relative;
@@ -59,7 +60,7 @@
 }
 
 :host(:state(checked)) {
-  --background: var(--nve-sys-accent-secondary-background);
+  --background: var(--accent-color);
   --anchor-background: var(--nve-sys-text-white-color);
 }
 
